# recordCLI

./: .gitignore  24 Apr at 11-42.m4a  CLAUDE.md  LICENSE  README.md  pyproject.toml  transcript-hook.sh
notes/how-to-lie-with-statistics1/: 2026-04-24_08-42_how-to-lie-with-statistics1.txt
notes/untagged/: 2026-04-23_17-11.txt  2026-04-23_17-13.txt  2026-04-23_17-18.txt  2026-04-23_17-23.txt  2026-04-23_17-24.txt  2026-04-23_17-28.txt  2026-04-23_17-30.txt  2026-04-23_21-53.txt  2026-04-23_22-00.txt
recordcli/: cli.py  transcriber.py
whisperlogs/: cli.py  filer.py  recorder.py
